@@ -2,69 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.7</version>
+        <version>3.1.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.justedlev</groupId>
-    <artifactId>jnotification-service</artifactId>
+
+    <groupId>com.github.justedlev.hub</groupId>
+    <artifactId>jh-notifications</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>jnotification-service</name>
-    <description>jnotification-service</description>
+    <name>notifications.justedlev.hub</name>
+    <description>Justedlev Hub Microservices</description>
+
     <modules>
-        <module>jnotification-client</module>
-        <module>jnotification-server</module>
+        <module>api-model</module>
+        <module>service</module>
+        <module>api</module>
     </modules>
+
     <properties>
         <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jar.manifest.packageName>com.justedlev.hub</jar.manifest.packageName>
+        <mvn.repository.id>github</mvn.repository.id>
+        <mvn.repository.name>GitHub Justedlev Apache Maven Packages</mvn.repository.name>
+        <mvn.repository.url>https://maven.pkg.github.com/Justedlev/maven-repository</mvn.repository.url>
     </properties>
-    <dependencies>
-        <!--Utils-->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <!--Utils-->
-
-        <!--Spring-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <!--Spring-->
-    </dependencies>
 
     <build>
         <plugins>
@@ -74,6 +42,25 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <source>${java.version}</source>
+                    <additionalOptions>-html5</additionalOptions>
+                    <additionalJOptions>--allow-script-in-comments</additionalJOptions>
                 </configuration>
             </plugin>
             <plugin>
@@ -83,10 +70,10 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <packageName>com.justedlev.notification</packageName>
+                            <packageName>${jar.manifest.packageName}</packageName>
                         </manifest>
                         <manifestEntries>
-                            <Created-By>Justedlev {-...-}</Created-By>
+                            <Created-By>Justedlev</Created-By>
                             <Implementation-Title>${project.description}</Implementation-Title>
                             <Implementation-Version>${project.version}</Implementation-Version>
                         </manifestEntries>
@@ -96,4 +83,13 @@
         </plugins>
     </build>
 
+    <developers>
+        <developer>
+            <id>justedlev</id>
+            <name>Edward L.</name>
+            <email>jvstedlev@gmail.com</email>
+            <url>https://github.com/Justedlev</url>
+            <timezone>Asia/Jerusalem</timezone>
+        </developer>
+    </developers>
 </project>
